apps/tracking-tool/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tracking-tool
  namespace: tracking-tool
  labels:
    app: tracking-tool
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: tracking-tool
